<resources>
    <string name="app_name">Finance Control</string>
    <string name="action_settings">Settings</string>

    <!-- Action Bar Titles -->
    <string name="new_expense_tittle">New Expense</string>
    <string name="months_title">Months</string>
    <string name="expenses_title">Expenses</string>

    <!-- Hint -->
    <string name="expenseName">expense</string>
    <string name="value">value</string>
    <string name="date">date</string>

    <!-- Button -->
    <string name="confirm">Confirm</string>
    <string name="choose_button">Choose Date</string>

    <!-- Expenses menu -->
    <string name="expenses">Expenses</string>
    <string name="new_expense">New Expense</string>

    <!-- Toast Message -->
    <string name="remove_item">Remove expense?</string>


    <!-- Months array -->
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

</resources>
